typecheck/tests/micro/good/literal.c
//literal
void main(void)
{
1;
return;
}