typecheck/tests/micro/bad/void_add.c
void apple(void)
{return;
}

void main(void)
{
	apple()+1;
return;
}